💄update styles implements @use and remove @import

--- a/src/app/features/products/components/product-card/product-card.component.scss
+++ b/src/app/features/products/components/product-card/product-card.component.scss
@@ -1,8 +1,8 @@
-@import "styles/variables";
-@import "styles/mixins";
+@use "styles/variables" as v;
+@use "styles/mixins" as m;
 
 .product-card {
-  @include card;
+  @include m.card;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,7 @@
   width: 100%;
   height: 200px;
   overflow: hidden;
-  background: $gray-light;
+  background: v.$gray-light;
 }
 
 .product-image {
@@ -42,8 +42,8 @@
 
 .rating-chip {
   position: absolute;
-  top: $spacing-sm;
-  right: $spacing-sm;
+  top: v.$spacing-sm;
+  right: v.$spacing-sm;
   background: rgba(255, 255, 255, 0.95) !important;
   font-weight: 600;
 
@@ -60,31 +60,31 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: $spacing-md !important;
+  padding: v.$spacing-md !important;
 }
 
 .category-chip {
   align-self: flex-start;
-  margin-bottom: $spacing-sm;
-  font-size: $font-size-xs;
-  background: $pastel-purple-light !important;
-  color: $pastel-purple-dark;
+  margin-bottom: v.$spacing-sm;
+  font-size: v.$font-size-xs;
+  background: v.$pastel-purple-light !important;
+  color: v.$pastel-purple-dark;
 }
 
 .product-name {
-  font-size: $font-size-lg;
+  font-size: v.$font-size-lg;
   font-weight: 600;
-  margin-bottom: $spacing-sm;
-  color: $black;
-  @include truncate(2);
+  margin-bottom: v.$spacing-sm;
+  color: v.$black;
+  @include m.truncate(2);
 }
 
 .product-description {
-  color: $gray-dark;
-  font-size: $font-size-sm;
-  margin-bottom: $spacing-md;
+  color: v.$gray-dark;
+  font-size: v.$font-size-sm;
+  margin-bottom: v.$spacing-md;
   flex: 1;
-  @include truncate(3);
+  @include m.truncate(3);
 }
 
 .card-footer {
@@ -92,25 +92,25 @@
 }
 
 .price-section {
-  @include flex-between;
+  @include m.flex-between;
   align-items: flex-end;
 }
 
 .price {
-  font-size: $font-size-xl;
+  font-size: v.$font-size-xl;
   font-weight: 700;
-  color: $pastel-blue-dark;
+  color: v.$pastel-blue-dark;
 }
 
 .stock {
   display: flex;
   align-items: center;
   gap: 4px;
-  font-size: $font-size-xs;
-  color: $gray-dark;
+  font-size: v.$font-size-xs;
+  color: v.$gray-dark;
 
   &.low-stock {
-    color: $warning;
+    color: v.$warning;
     font-weight: 600;
   }
 
@@ -122,15 +122,15 @@
 }
 
 .card-actions {
-  padding: $spacing-md !important;
+  padding: v.$spacing-md !important;
   margin: 0 !important;
 }
 
 .add-to-cart-btn {
   width: 100%;
-  padding: $spacing-sm $spacing-md;
+  padding: v.$spacing-sm v.$spacing-md;
 
   mat-icon {
-    margin-right: $spacing-xs;
+    margin-right: v.$spacing-xs;
   }
 }
