--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
       <div class="header-container">
         <a routerLink="/" class="logo">
           <mat-icon>shopping_bag</mat-icon>
-          <span>Tienda Online</span>
+          <span>Tienda Geek</span>
         </a>
 
         <nav class="nav-links" role="navigation" aria-label="Navegación principal">
