--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,5 +3,5 @@
   <router-outlet></router-outlet>
 </main>
 <footer class="app-footer">
-  <p>&copy; 2024 Tienda Online. Todos los derechos reservados.</p>
+  <p>&copy; {{ year }} Tienda Geek. Todos los derechos reservados.</p>
 </footer>
