--- a/src/app/features/checkout/components/order-success/order-success.component.scss
+++ b/src/app/features/checkout/components/order-success/order-success.component.scss
@@ -84,6 +84,7 @@ h1 {
   text-align: left;
   margin-bottom: v.$spacing-xl;
   background: v.$gray-light;
+  padding: v.$spacing-sm;
 
   h3 {
     font-size: v.$font-size-lg;
